RESOLVED FIXED61527
[Qt] QtTestBrowser "Switch User Agent" dialog is broken
https://bugs.webkit.org/show_bug.cgi?id=61527
Summary [Qt] QtTestBrowser "Switch User Agent" dialog is broken
Ademar Reis
Reported 2011-05-26 07:37:43 PDT
[Qt] QtTestBrowser "Switch User Agent" dialog is broken
Attachments
Patch (641 bytes, patch)
2011-05-26 07:44 PDT, Ademar Reis
no flags
Patch (1.36 KB, patch)
2011-05-26 07:47 PDT, Ademar Reis
no flags
Ademar Reis
Comment 1 2011-05-26 07:40:56 PDT
On my desktop: Linux (Fedora 13), Qt-4.7. Patch (trivial) is on the way.
Ademar Reis
Comment 2 2011-05-26 07:44:06 PDT
Ademar Reis
Comment 3 2011-05-26 07:44:48 PDT
Comment on attachment 94970 [details] Patch having problems generating the changelog with webkit-patch upload -g... ignore this attachment.
Ademar Reis
Comment 4 2011-05-26 07:47:47 PDT
Alexis Menard (darktears)
Comment 5 2011-05-26 12:51:16 PDT
lgtm
WebKit Commit Bot
Comment 6 2011-05-26 14:59:10 PDT
Comment on attachment 94972 [details] Patch Clearing flags on attachment: 94972 Committed r87436: <http://trac.webkit.org/changeset/87436>
WebKit Commit Bot
Comment 7 2011-05-26 14:59:14 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 8 2011-05-27 10:43:06 PDT
Revision r87436 cherry-picked into qtwebkit-2.2 with commit bb2ecb8 <http://gitorious.org/webkit/qtwebkit/commit/bb2ecb8>
Note You need to log in before you can comment on or make changes to this bug.