2011-05-26  Ademar de Souza Reis Jr.  <ademar.reis@openbossa.org>

Reviewed by Andreas Kling.

        [Qt] QtTestBrowser "Switch User Agent" dialog is broken
        https://bugs.webkit.org/show_bug.cgi?id=61527

        The setMaximumHeight() call is unecessary and breaks the dialog at
        least on my setup.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::showUserAgentDialog):

Canonical link: https://commits.webkit.org/76982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87436 268f45cc-cd09-0410-ab3c-d52691b4dbfc